haproxy/sushi/base/haproxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sushi-proxy
  labels:
    app.kubernetes.io/part-of: sushiweb-demo
    app: sushiweb-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sushiweb-demo
  template:
    metadata:
      labels:
        app: sushiweb-demo
    spec:
      containers:
      - image: quay.io/schabrolles/haproxy:2.1-alpine
        imagePullPolicy: Always
        name: haproxy
        ports:
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        volumeMounts:
        - mountPath: /usr/local/etc/haproxy/
          name: config
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: haproxy
            path: haproxy.cfg
          name: haproxy
        name: config
