haproxy/sushi/base/haproxy-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sushiweb-demo
  name: sushi-proxy
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sushiweb-demo
  sessionAffinity: None
  type: ClusterIP
