haproxy/sushi/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sushi-prod
spec:
  host: hostnamehere
  to:
    kind: Service
    name: sushi-proxy
    weight: 100
  port:
    targetPort: 8080
status:
  ingress: []
